[package]
name = "trading_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
url = "2.2.2"
crossterm = "0.22"